--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -122,8 +122,12 @@ jobs:
             regions+=('eu-central-1')
             regions+=('ap-southeast-1')
             regions+=('ap-southeast-2')
-            regions+=('ap-northeast-1')
             regions+=('ap-south-1')
+          
+            if [ "${{ matrix.test.name }}" != "development" ]
+            then
+              regions+=('ap-northeast-1')
+            fi
             ;;
           azure)
             regions+=('germanywestcentral')
