Disable setting backup configuration for development services (#168)

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -46,11 +46,42 @@ jobs:
       - uses: ./.github/actions/find-tf-releases
         id: find
 
+  list-examples:
+    outputs:
+      examples: ${{ steps.list.outputs.examples }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: List examples
+        id: list
+        run: |
+          examples="$(echo '[]' | jq .)"
+          pushd examples/full
+          for candidate in $(ls -1 .)
+          do
+            if [ -d $candidate ]
+            then
+              cloud_providers=()
+              pushd $candidate
+              for cloud in $(ls -1 .)
+              do
+                if [ -d $cloud ]
+                then
+                  examples="$(echo "$examples" | jq -c --arg name "$candidate" --arg cloud "$cloud" '.[. | length] = { "name": $name, "cloud": $cloud }')"
+                fi
+              done
+              popd
+            fi
+          done
+          popd
+          echo "examples=${examples}" >> "$GITHUB_OUTPUT"
+
   # Run e2e tests
   e2e:
     outputs:
       status: ${{ steps.status.outputs.status }}
-    needs: [ "token", "find-tf-releases" ]
+    needs: [ "token", "find-tf-releases", "list-examples" ]
     runs-on: ubuntu-latest
     continue-on-error: true
     permissions:
@@ -59,9 +90,8 @@ jobs:
       fail-fast: false
       max-parallel: 10
       matrix:
-        test: [ "basic", "private_endpoint" ]
         tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
-        cloud_provider: [ "aws", "gcp", "azure" ]
+        test: ${{ fromJSON(needs.list-examples.outputs.examples) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -76,11 +106,11 @@ jobs:
             test_type=" upgrade"
           fi
           
-          echo "test_name=[e2e${test_type}]-${{ matrix.test }}-${{ matrix.tf_release }}-${{ matrix.cloud_provider }}-${{ needs.token.outputs.token }}" >> $GITHUB_OUTPUT
+          echo "test_name=[e2e${test_type}]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}" >> $GITHUB_OUTPUT
       - name: Pick a cloud region
         id: region
         run: |
-          cloud="${{ matrix.cloud_provider }}"
+          cloud="${{ matrix.test.cloud }}"
           regions=()
           case $cloud in
           aws)
@@ -92,8 +122,12 @@ jobs:
             regions+=('eu-central-1')
             regions+=('ap-southeast-1')
             regions+=('ap-southeast-2')
-            regions+=('ap-northeast-1')
             regions+=('ap-south-1')
+          
+            if [ "${{ matrix.test.name }}" != "development" ]
+            then
+              regions+=('ap-northeast-1')
+            fi
             ;;
           azure)
             regions+=('germanywestcentral')
@@ -118,15 +152,15 @@ jobs:
           token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
           token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
           service_name: ${{steps.name.outputs.test_name}}
-          test_name: ${{ matrix.test }}
+          test_name: ${{ matrix.test.name }}
           tf_release: ${{ matrix.tf_release }}
-          cloud_provider: ${{ matrix.cloud_provider }}
+          cloud_provider: ${{ matrix.test.cloud }}
           upgrade_test: ${{ inputs.run_upgrade_test }}
           skip_build: "${{ !contains(inputs.skip_build_from_branch, 'false') }}"
           region: ${{steps.region.outputs.region}}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
       - name: cleanup
-        if: ${{ always() && matrix.cloud_provider == 'aws' && matrix.test == 'private_endpoint' }}
+        if: ${{ always() && matrix.test.cloud == 'aws' && matrix.test.name == 'private_endpoint' }}
         uses: ./.github/actions/cleanup-aws
         with:
           service_name: ${{steps.name.outputs.test_name}}
