--- a/examples/provider/provider.tf.template
+++ b/examples/provider/provider.tf.template
@@ -1,7 +1,7 @@
 terraform {
   required_providers {
     clickhouse = {
-      version = "1.2.2"
+      version = "${CLICKHOUSE_TERRAFORM_PROVIDER_VERSION}"
       source  = "ClickHouse/clickhouse"
     }
   }
