--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -82,7 +82,7 @@ jobs:
           test_type=""
           if [ "${{inputs.run_upgrade_test}}" == "true" ]
           then
-            test_type=" upgrade"
+            test_type=" upg"
           fi
           
           echo "test_name=[e2e${test_type}]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}" >> $GITHUB_OUTPUT
