--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -150,6 +150,7 @@ jobs:
         id: status
         if: always()
         run: |
+          echo "Current status: '${{ steps.status.outputs.status }}'"
           if [ "${{ steps.e2e.outcome }}" == "success" ]
           then
             echo "status=success" >> $GITHUB_OUTPUT
