Handle num_replicas field coming from api when not set in the .tf file

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -148,16 +148,10 @@ jobs:
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
       - name: Mark error
         id: status
-        if: always()
+        if: failure()
         run: |
-          echo "Current status: '${{ steps.status.outputs.status }}'"
-          if [ "${{ steps.e2e.outcome }}" == "success" ]
-          then
-            echo "status=success" >> $GITHUB_OUTPUT
-          else
-            echo "status=failure" >> $GITHUB_OUTPUT
-            exit 1
-          fi
+          echo "status=failure" >> $GITHUB_OUTPUT
+          exit 1
 
   report:
     runs-on: ubuntu-latest
