--- a/.github/workflows/fmt.yaml
+++ b/.github/workflows/fmt.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
+          cache: true
 
       - name: Run fmt
         run: make fmt
