--- a/.github/actions/import/action.yaml
+++ b/.github/actions/import/action.yaml
@@ -1,6 +1,10 @@
 name: "Import existing resource in terraform"
 description: "Import existing resource in terraform"
 inputs:
+  api_url:
+    required: false
+    description: "Full URL of the API service to use. Defaults to the production API endpoint https://api.clickhouse.cloud/v1"
+    default: ""
   organization_id:
     required: true
     description: "The clickhouse organization ID"
@@ -92,6 +96,12 @@ runs:
         echo "::group::Create the resource"
         cd "tests/import/${{ inputs.resource_type }}"
         
+        if [ "${{inputs.api_url}}" != "" ]
+        then
+          export CLICKHOUSE_API_URL="${{inputs.api_url}}"
+          echo "Using '$CLICKHOUSE_API_URL' as API URL"
+        fi
+        
         terraform init -input=false -upgrade
         terraform apply -no-color -var-file=variables.tfvars -auto-approve
         
@@ -108,7 +118,13 @@ runs:
       run: |
         echo "::group::Run terraform"
         cd "tests/import/${{ inputs.resource_type }}"
-                
+
+        if [ "${{inputs.api_url}}" != "" ]
+        then
+          export CLICKHOUSE_API_URL="${{inputs.api_url}}"
+          echo "Using '$CLICKHOUSE_API_URL' as API URL"
+        fi
+
         terraform init -input=false -upgrade
         terraform import -no-color -var-file=variables.tfvars clickhouse_${{ inputs.resource_type }}.import ${{ steps.apply.outputs.id }}
         echo "::endgroup::"
@@ -118,5 +134,12 @@ runs:
       run: |
         echo "::group::Run terraform destroy"
         cd "tests/import/${{ inputs.resource_type }}"
+        
+        if [ "${{inputs.api_url}}" != "" ]
+        then
+          export CLICKHOUSE_API_URL="${{inputs.api_url}}"
+          echo "Using '$CLICKHOUSE_API_URL' as API URL"
+        fi
+        
         terraform destroy -no-color -auto-approve -var-file=variables.tfvars
         echo "::endgroup::"
