--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -1,6 +1,10 @@
 name: "Run e2e tests"
 description: "Run end to end tests for terraform provider"
 inputs:
+  enable_debug:
+    required: false
+    default: "false"
+    description: "If true it adds TF_LOG=debug to terraform commands"
   api_url:
     required: false
     description: "Full URL of the API service to use. Defaults to the production API endpoint https://api.clickhouse.cloud/v1"
@@ -130,6 +134,10 @@ runs:
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
         fi
                 
+        if [ "${{ inputs.enable_debug }}" == "true" ]; then
+          export TF_LOG=debug
+        fi
+                
         terraform init -input=false
         terraform plan -no-color -var-file=variables.tfvars
         terraform apply -no-color -auto-approve -var-file=variables.tfvars
@@ -166,6 +174,10 @@ runs:
           export CLICKHOUSE_API_URL="${{inputs.api_url}}"
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
         fi
+        
+        if [ "${{ inputs.enable_debug }}" == "true" ]; then
+          export TF_LOG=debug
+        fi
                 
         terraform init -input=false -upgrade
         terraform plan -no-color -var-file=variables.tfvars
@@ -184,6 +196,10 @@ runs:
         then
           export CLICKHOUSE_API_URL="${{inputs.api_url}}"
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
+        fi
+        
+        if [ "${{ inputs.enable_debug }}" == "true" ]; then
+          export TF_LOG=debug
         fi
         
         terraform destroy -no-color -auto-approve -var-file=variables.tfvars
