--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,57 +102,29 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Pick a cloud region
-        id: region
+      - name: Get API details for env
+        id: credentials
+        env:
+          api_env: "Production"
+          api_env_production: "${{ secrets.API_ENV_PRODUCTION }}"
+          api_env_staging: "${{ secrets.API_ENV_STAGING }}"
+          api_env_development: "${{ secrets.API_ENV_DEVELOPMENT }}"
         run: |
-          cloud="${{ matrix.test.cloud }}"
-          regions=()
-          case $cloud in
-          aws)
-            regions+=('us-west-2')
-            regions+=('us-east-2')
-            regions+=('us-east-1')
-            regions+=('eu-west-1')
-            regions+=('eu-west-2')
-            regions+=('eu-central-1')
-            regions+=('ap-southeast-1')
-            regions+=('ap-southeast-2')
-            regions+=('ap-south-1')
-          
-            if [ "${{ matrix.test.name }}" != "development" ]
-            then
-              regions+=('ap-northeast-1')
-            fi
-            ;;
-          azure)
-            regions+=('germanywestcentral')
-            regions+=('eastus2')
-            regions+=('westus3')
-            ;;
-          gcp)
-            regions+=('us-east1')
-            regions+=('us-central1')
-            regions+=('europe-west4')
-            regions+=('asia-southeast1')
-            ;;
-          esac
-
-          random=${regions[ $RANDOM % ${#regions[@]} ]}
-          echo "Lucky winner region is: $random"
-          echo "region=$random" >> $GITHUB_OUTPUT
+          bash ./.github/scripts/set_api_env.sh ${{ matrix.test.cloud }}
 
       - name: e2e
         uses: ./.github/actions/e2e
         with:
-          organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
-          token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
-          token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+          api_url: ${{ steps.credentials.outputs.api_url }}
+          organization_id: ${{ steps.credentials.outputs.organization_id }}
+          token_key: ${{ steps.credentials.outputs.api_key_id }}
+          token_secret: ${{ steps.credentials.outputs.api_key_secret }}
           service_name: "[e2e${test_type}]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}"
           test_name: ${{ matrix.test.name }}
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
           upgrade_test: ${{ matrix.upgrade_test }}
-          region: ${{steps.region.outputs.region}}
+          region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
 
       - name: Mark error
@@ -182,52 +154,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Pick a cloud region
-        id: region
+
+      - name: Get API details for env
+        id: credentials
+        env:
+          api_env: "Production"
+          api_env_production: "${{ secrets.API_ENV_PRODUCTION }}"
+          api_env_staging: "${{ secrets.API_ENV_STAGING }}"
+          api_env_development: "${{ secrets.API_ENV_DEVELOPMENT }}"
         run: |
-          cloud="${{ matrix.cloud_provider }}"
-          regions=()
-          case $cloud in
-          aws)
-            regions+=('us-west-2')
-            regions+=('us-east-2')
-            regions+=('us-east-1')
-            regions+=('eu-west-1')
-            regions+=('eu-west-2')
-            regions+=('eu-central-1')
-            regions+=('ap-southeast-1')
-            regions+=('ap-southeast-2')
-            regions+=('ap-south-1')
-            regions+=('ap-northeast-1')
-            ;;
-          azure)
-            regions+=('germanywestcentral')
-            regions+=('eastus2')
-            regions+=('westus3')
-            ;;
-          gcp)
-            regions+=('us-east1')
-            regions+=('us-central1')
-            regions+=('europe-west4')
-            regions+=('asia-southeast1')
-            ;;
-          esac
-          
-          random=${regions[ $RANDOM % ${#regions[@]} ]}
-          echo "Lucky winner region is: $random"
-          echo "region=$random" >> $GITHUB_OUTPUT
+          bash ./.github/scripts/set_api_env.sh ${{ matrix.cloud_provider }}
 
       - name: import
         id: import
         uses: ./.github/actions/import
         with:
-          organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
-          token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
-          token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+          api_url: ${{ steps.credentials.outputs.api_url }}
+          organization_id: ${{ steps.credentials.outputs.organization_id }}
+          token_key: ${{ steps.credentials.outputs.api_key_id }}
+          token_secret: ${{ steps.credentials.outputs.api_key_secret }}
           resource_name: "[import]-${{ matrix.tf_release }}-${{ matrix.cloud_provider }}-${{ needs.token.outputs.token }}"
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.cloud_provider }}
-          region: ${{ steps.region.outputs.region }}
+          region: ${{ steps.credentials.outputs.region }}
 
       - name: Mark error
         id: status
@@ -261,19 +210,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ "e2e", "import", "token" ]
     continue-on-error: true
-    env:
-      organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
-      token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
-      token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Get API details for env
+        id: credentials
+        env:
+          api_env: "Production"
+          api_env_production: "${{ secrets.API_ENV_PRODUCTION }}"
+          api_env_staging: "${{ secrets.API_ENV_STAGING }}"
+          api_env_development: "${{ secrets.API_ENV_DEVELOPMENT }}"
+        run: |
+          bash ./.github/scripts/set_api_env.sh ${{ matrix.cloud_provider }}
       - name: cleanup
         uses: ./.github/actions/cleanup-clickhouse
         with:
-          organization_id: ${{ secrets.TF_VAR_ORGANIZATION_ID }}
-          token_key: ${{ secrets.TF_VAR_TOKEN_KEY }}
-          token_secret: ${{ secrets.TF_VAR_TOKEN_SECRET }}
+          api_url: ${{ steps.credentials.outputs.api_url }}
+          organization_id: ${{ steps.credentials.outputs.organization_id }}
+          token_key: ${{ steps.credentials.outputs.api_key_id }}
+          token_secret: ${{ steps.credentials.outputs.api_key_secret }}
           token: ${{needs.token.outputs.token}}
 
   # Bump the provider version in the examples directory
