--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,8 +20,6 @@ jobs:
   # Validate the input
   validate:
     runs-on: ubuntu-latest
-    outputs:
-      test-upgrade-matrix: ${{ steps.check.outputs.test-upgrade-matrix }}
     steps:
       - name: Check input
         id: check
@@ -34,13 +32,6 @@ jobs:
           else
             echo "Invalid semver: \"$version\". Must be something like 1.2.3 without leading \"v\""
             exit 1
-          fi
-          
-          if [ "${{inputs.test_upgrade}}" == "true" ]
-          then
-            echo "test-upgrade-matrix=[\"true\", \"false\"]" >> $GITHUB_OUTPUT
-          else
-            echo "test-upgrade-matrix=[\"false\"]" >> $GITHUB_OUTPUT
           fi
 
   # Generate a random token to tag the tests with
@@ -95,7 +86,6 @@ jobs:
       matrix:
         tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
         test: ${{ fromJSON(needs.list-examples.outputs.examples) }}
-        upgrade_test: ${{ fromJSON(needs.validate.outputs.test-upgrade-matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -119,11 +109,65 @@ jobs:
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
           token_secret: ${{ steps.credentials.outputs.api_key_secret }}
-          service_name: "[e2e]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ matrix.upgrade_test }}-${{ needs.token.outputs.token }}"
+          service_name: "[e2e]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}"
           test_name: ${{ matrix.test.name }}
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
-          upgrade_test: ${{ matrix.upgrade_test }}
+          upgrade_test: "false"
+          region: ${{ steps.credentials.outputs.region }}
+          aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+
+      - name: Mark error
+        id: status
+        if: failure()
+        run: |
+          echo "status=failure" >> $GITHUB_OUTPUT
+          exit 1
+
+  # Run e2e tests
+  upgrade:
+    outputs:
+      status: ${{ steps.status.outputs.status }}
+    needs: [ "validate", "token", "find-tf-releases", "list-examples" ]
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    permissions:
+      id-token: write
+    strategy:
+      fail-fast: false
+      max-parallel: 10
+      matrix:
+        tf_release: ${{ fromJSON(needs.find-tf-releases.outputs.releases) }}
+        test: ${{ fromJSON(needs.list-examples.outputs.examples) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Get API details for env
+        id: credentials
+        env:
+          api_env: "Production"
+          api_env_production: "${{ secrets.API_ENV_PRODUCTION }}"
+          api_env_staging: "${{ secrets.API_ENV_STAGING }}"
+          api_env_development: "${{ secrets.API_ENV_DEVELOPMENT }}"
+        run: |
+          bash ./.github/scripts/set_api_env.sh ${{ matrix.test.cloud }}
+
+      - name: upgrade
+        if: ${{inputs.test_upgrade == 'true' }}
+        uses: ./.github/actions/e2e
+        with:
+          api_url: ${{ steps.credentials.outputs.api_url }}
+          organization_id: ${{ steps.credentials.outputs.organization_id }}
+          token_key: ${{ steps.credentials.outputs.api_key_id }}
+          token_secret: ${{ steps.credentials.outputs.api_key_secret }}
+          service_name: "[upgrade]-${{ matrix.test.name }}-${{ matrix.tf_release }}-${{ matrix.test.cloud }}-${{ needs.token.outputs.token }}"
+          test_name: ${{ matrix.test.name }}
+          tf_release: ${{ matrix.tf_release }}
+          cloud_provider: ${{ matrix.test.cloud }}
+          upgrade_test: "true"
           region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
 
@@ -187,12 +231,12 @@ jobs:
 
   report:
     runs-on: ubuntu-latest
-    needs: [ "e2e", "import" ]
-    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+    needs: [ "e2e", "import", "upgrade" ]
+    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
     steps:
       - name: Report Failure on slack
         uses: ravsamhq/notify-slack-action@v2
-        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: 'failure'
@@ -201,14 +245,14 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
       - name: Report error on github UI
-        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+        if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
         run: |
           exit 1
 
   # Delete any leftover service that might have failed deleting
   cleanup:
     runs-on: ubuntu-latest
-    needs: [ "e2e", "import", "token" ]
+    needs: [ "e2e", "import", "upgrade", "token" ]
     continue-on-error: true
     steps:
       - name: Checkout
@@ -233,8 +277,8 @@ jobs:
 
   # Bump the provider version in the examples directory
   bump-examples:
-    needs: [ "e2e", "import" ]
-    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+    needs: [ "e2e", "import", "upgrade" ]
+    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -274,8 +318,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    needs: [ "e2e", "import", "bump-examples" ]
-    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+    needs: [ "e2e", "import", "upgrade", "bump-examples" ]
+    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -292,8 +336,8 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    needs: [ "tag", "e2e", "import" ]
-    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' }}
+    needs: [ "tag", "e2e", "import", "upgrade" ]
+    if: ${{ needs.e2e.outputs.status == 'failure' || needs.import.outputs.status == 'failure' || needs.upgrade.outputs.status == 'failure' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
